--- a/frontend/src/css/Main.css
+++ b/frontend/src/css/Main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif; /* Set a default font */
+  font-family: Inter, sans-serif; /* Set a default font */
   line-height: 1.6; /* Improve text readability */
   margin-top: 50px;
   background-color: #f4f5f7;
