--- a/frontend/src/css/FoodEntry.css
+++ b/frontend/src/css/FoodEntry.css
@@ -16,7 +16,7 @@
     margin: 0;
 }
 
-.food-card {
+.food-card2 {
     background: var(--color-card-bg);
     color: var(--color-text-dark);
     border-radius: var(--radius-lg);
