Removed the arrows on the input box

--- a/frontend/src/css/FoodEntry.css
+++ b/frontend/src/css/FoodEntry.css
@@ -1,3 +1,16 @@
+/* Remove arrows/spinners in Chrome, Edge, Safari */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Remove arrows/spinners in Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+
 .food-entry-container {
     max-width: 700px;
     margin: 0 auto;
