--- a/frontend/src/css/Day.css
+++ b/frontend/src/css/Day.css
@@ -1,25 +1,4 @@
-:root {
-    --gap-sm: 8px;
-    --color-bg: #3c3c87;
-    --color-bg-dark: #2c2c65;
-
-    --color-card-bg: #ffffff;
-    --color-card-bg-alt: #f6f6fc;
-
-    --color-text-dark: #222;
-    --color-text-light: #f0f0f0;
-
-    --color-primary: #3c3c87;
-    --color-primary-light: #6b6bd1;
-
-    --radius-lg: 16px;
-    --radius-md: 12px;
-    --radius-sm: 10px;
-
-    --shadow-md: 0 4px 10px rgba(0, 0, 0, 0.12);
-    --shadow-lg: 0 6px 15px rgba(0, 0, 0, 0.14);
-}
-
+@import url('./variables.css');
 
 .entry-delete {
     position: absolute;
@@ -48,9 +27,6 @@
     transform: scale(1.1);
 }
 
-
-
-/* Page Layout */
 .container {
     max-width: 1300px;
     margin: 0 auto;
